--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name="Adwaita"
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Verdana 14
+gtk-font-name=Microsoft Sans Serif 12
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-button-images=1
