--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,3 +1,5 @@
+# originally from https://github.com/jcs/dotfiles/blob/master/.config/gtk-3.0/settings.ini
+
 [Settings]
 gtk-theme-name="Adwaita"
 gtk-icon-theme-name=Adwaita
