enabled hardware acceleration

--- a/config/chromium-flags.conf
+++ b/config/chromium-flags.conf
@@ -81,3 +81,9 @@
 --trace-upload-url about:config 
 --variations-insecure-server-url about:config 
 --variations-server about:config"
+--use-gl=desktop
+--enable-accelerated-video-decode
+--ignore-gpu-blacklist
+--enable-gpu-rasterization
+--enable-zero-copy
+--disable-gpu-driver-bug-workarounds
