--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -21,4 +21,25 @@
 			<const>lcddefault</const>
 		</edit>
 	</match>
+	<selectfont>
+		<rejectfont>
+			<patelt name="family">
+				<string>Courier New</string>
+			</patelt>
+		</rejectfont>
+	</selectfont>
+	<selectfont>
+		<rejectfont>
+			<patelt name="family">
+				<string>Courier</string>
+			</patelt>
+		</rejectfont>
+	</selectfont>
+
+	<alias>
+		<family>monospace</family>
+		<prefer>
+			<family>Liberation Mono</family>
+		</prefer>
+	</alias>
 </fontconfig>
