--- a/config/i3/config
+++ b/config/i3/config
@@ -7,11 +7,10 @@ font $font
 floating_modifier $mod
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
-bindsym $mod+d exec $launcher
+bindsym $mod+p exec $launcher
 
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
-
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer set Master 2%+"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer set Master 2%-"
@@ -39,7 +38,7 @@ bindsym $mod+v split v
 
 bindsym $mod+f fullscreen toggle
 
-#bindsym $mod+s layout stacking
+bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -48,6 +47,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 bindsym $mod+a focus parent
+bindsym $mod+d focus child
 
 set $ws1 "1"
 set $ws2 "2"
