move startup programs to i3's config

--- a/config/i3/config
+++ b/config/i3/config
@@ -12,6 +12,9 @@ bindsym $mod+p exec $launcher
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
+exec --no-startup-id dunst
+exec --no-startup-id xbanish
+
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer set Master 2%+"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer set Master 2%-"
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
