--- a/config/i3/config
+++ b/config/i3/config
@@ -108,4 +108,4 @@ bar {
 
 workspace_layout stacking
 
-bindsym Mod4+g exec i3-msg \"rename workspace to \\\"$(rofi -dmenu -p rename)\\\"\"
+bindsym $mod+g exec i3-msg \"rename workspace to \\\"$(rofi -dmenu -p rename)\\\"\"
