--- a/config/i3/config
+++ b/config/i3/config
@@ -1,7 +1,7 @@
 set $mod Mod4
 set $font "pango:Bitstream Vera Sans Mono 12"
 set $term "i3-sensible-terminal"
-set $launcher "rofi -show run"
+set $launcher "rofi -show run -cache-dir ~/.rofi-cache"
 
 font $font
 floating_modifier $mod
@@ -20,6 +20,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 bindsym $mod+p exec $launcher
 bindsym $mod+g exec i3-msg \"rename workspace to \\\"$(rofi -dmenu -p rename)\\\"\"
+bindsym $mod+q exec "rofi -show window"
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer set Master 2%+"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer set Master 2%-"
