--- a/config/i3/config
+++ b/config/i3/config
@@ -22,8 +22,8 @@ bindsym $mod+p exec $launcher
 bindsym $mod+g exec i3-msg \"rename workspace to \\\"$(rofi -dmenu -p rename)\\\"\"
 bindsym $mod+q exec "rofi -show window"
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer set Master 2%+"
-bindsym XF86AudioLowerVolume exec --no-startup-id "amixer set Master 2%-"
+bindsym --release XF86AudioRaiseVolume exec --no-startup-id "amixer set Master 2%+"
+bindsym --release XF86AudioLowerVolume exec --no-startup-id "amixer set Master 2%-"
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle"
 
 bindsym XF86AudioPrev exec --no-startup-id "playerctl previous"
