--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -21,4 +21,12 @@
 			<const>lcddefault</const>
 		</edit>
 	</match>
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>monospace</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>Bitstream Vera Sans Mono</string>
+		</edit>
+	</match>
 </fontconfig>
