start i3-battery-popup on startup

--- a/config/i3/config
+++ b/config/i3/config
@@ -15,6 +15,7 @@ exec --no-startup-id xbanish
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id spotify-song-info-wrapper.sh
+exec --no-startup-id i3-battery-popup.sh
 
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
