--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -26,7 +26,7 @@
 			<string>monospace</string>
 		</test>
 		<edit name="family" mode="assign">
-			<string>Bitstream Vera Sans Mono</string>
+			<string>Source Code Pro</string>
 		</edit>
 	</match>
 </fontconfig>
