fontconfig: reject 'fontweight: 200' with Noto Sans

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -29,4 +29,17 @@
 			<string>Source Code Pro</string>
 		</edit>
 	</match>
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>sans-serif</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>Noto Sans</string>
+		</edit>
+	</match>
+	<selectfont>
+		<rejectfont>
+			<glob>*/usr/share/fonts/noto/NotoSans-Thin.ttf</glob>
+		</rejectfont>
+	</selectfont>
 </fontconfig>
