--- a/config/i3/config
+++ b/config/i3/config
@@ -17,6 +17,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id i3-battery-popup.sh
 exec --no-startup-id blueman-applet
+exec --no-startup-id pasystray
 
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
