--- a/config/i3/config
+++ b/config/i3/config
@@ -114,4 +114,24 @@ bindsym $mod+r mode "resize"
 
 bar {
 	status_command i3status
+	colors {
+		background #F5F5F5
+		statusline #2B2F40
+		separator  #2B2F40
+
+		focused_workspace  #0F3E7B #4271AE #FFFFFF
+		active_workspace   #2B2F40 #D0D0D0 #2B2F40
+		inactive_workspace #2B2F40 #ECECE8 #2B2F40
+		urgent_workspace   #2F343A #900000 #FFFFFF
+		binding_mode       #2F343A #900000 #FFFFFF
+	}
 }
+
+# class                 border  bground text    indicator child_border
+client.focused          #0F3E7B #4271AE #FFFFFF #0F3E7B   #4271AE
+client.focused_inactive #2B2F40 #ECECE8 #2B2F40 #2B2F40   #5F676A
+client.unfocused        #2B2F40 #ECECE8 #2B2F40 #2B2F40   #222222
+client.urgent           #2F343A #900000 #FFFFFF #900000   #900000
+client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
+
+client.background       #FFFFFF
