--- a/config/i3/config
+++ b/config/i3/config
@@ -1,5 +1,5 @@
 set $mod Mod4
-set $font "pango:monospace 12"
+set $font "pango:Cantarell Bold 11"
 set $term alacritty
 set $launcher "rofi -show run -cache-dir ~/.rofi-cache"
 
