--- a/config/i3status/config
+++ b/config/i3status/config
@@ -6,6 +6,7 @@ general {
 	interval = 1
 }
 
+order += "battery all"
 order += "tztime local"
 
 wireless _first_ {
@@ -19,7 +20,8 @@ ethernet _first_ {
 }
 
 battery all {
-	format = "%status %percentage %remaining"
+	format = "%status %percentage"
+	# %remaining"
 }
 
 volume master {
