--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,92 +1,18 @@
 font:
   normal:
-    family: "Source Code Pro"
+    family: "Hack"
     style: Regular
 
   bold:
-    family: "Source Code Pro"
+    family: "Hack"
     style: Bold
 
   italic:
-    family: "Source Code Pro"
+    family: "Hack"
     style: Italic
 
   bold_italic:
-    family: "Source Code Pro"
+    family: "Hack"
     style: Bold Italic
 
   size: 12
-
-#colors:
-#  primary:
-#    background: '#2e3440'
-#    foreground: '#d8dee9'
-#    dim_foreground: '#a5abb6'
-#  cursor:
-#    text: '#2e3440'
-#    cursor: '#d8dee9'
-#  vi_mode_cursor:
-#    text: '#2e3440'
-#    cursor: '#d8dee9'
-#  selection:
-#    text: CellForeground
-#    background: '#4c566a'
-#  search:
-#    matches:
-#      foreground: CellBackground
-#      background: '#88c0d0'
-#    bar:
-#      background: '#434c5e'
-#      foreground: '#d8dee9'
-#  normal:
-#    black: '#3b4252'
-#    red: '#bf616a'
-#    green: '#a3be8c'
-#    yellow: '#ebcb8b'
-#    blue: '#81a1c1'
-#    magenta: '#b48ead'
-#    cyan: '#88c0d0'
-#    white: '#e5e9f0'
-#  bright:
-#    black: '#4c566a'
-#    red: '#bf616a'
-#    green: '#a3be8c'
-#    yellow: '#ebcb8b'
-#    blue: '#81a1c1'
-#    magenta: '#b48ead'
-#    cyan: '#8fbcbb'
-#    white: '#eceff4'
-#  dim:
-#    black: '#373e4d'
-#    red: '#94545d'
-#    green: '#809575'
-#    yellow: '#b29e75'
-#    blue: '#68809a'
-#    magenta: '#8c738c'
-#    cyan: '#6d96a5'
-#    white: '#aeb3bb'
-
-colors:
-  primary:
-    foreground: '#171421'
-    background: '#ffffff'
-
-  normal:
-    black:   '#171421'
-    red:     '#c01c28'
-    green:   '#26a269'
-    yellow:  '#a2734c'
-    blue:    '#12488b'
-    magenta: '#a347ba'
-    cyan:    '#2aa1b3'
-    white:   '#d0cfcc'
-
-  bright:
-    black:   '#5e5c64'
-    red:     '#f66151'
-    green:   '#33d17a'
-    yellow:  '#e9ad0c'
-    blue:    '#2a7bde'
-    magenta: '#c061cb'
-    cyan:    '#33c7de'
-    white:   '#ffffff'
