--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=TraditionalGreen
-gtk-icon-theme-name=menta
-gtk-font-name=Cantarell 11
+gtk-theme-name=ukui-theme
+gtk-icon-theme-name=ukui-icon-theme
+gtk-font-name=Noto Sans 11
 gtk-menu-images=1
 gtk-button-images=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
