--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,18 +1,17 @@
 font:
   normal:
-    family: "Hack"
+    family: "xos4 Terminus"
     style: Regular
-
   bold:
-    family: "Hack"
+    family: "xos4 Terminus"
     style: Bold
 
   italic:
-    family: "Hack"
+    family: "xos4 Terminus"
     style: Italic
 
   bold_italic:
-    family: "Hack"
+    family: "xos4 Terminus"
     style: Bold Italic
 
   size: 12
