--- a/config/i3/config
+++ b/config/i3/config
@@ -1,5 +1,5 @@
 set $mod Mod4
-set $font "pango:Cantarell Bold 11"
+set $font "xos4 Terminus 14"
 set $term alacritty
 set $launcher "rofi -show run
 
