--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,12 +1,11 @@
 [Settings]
-# ubuntu-kylin-theme
-gtk-theme-name=ukui-theme
-gtk-icon-theme-name=ukui-icon-theme
-gtk-font-name=Noto Sans 11
+gtk-theme-name=Breeze
+gtk-icon-theme-name=breeze
+gtk-font-name=Cantarell 11
 gtk-menu-images=1
 gtk-button-images=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
-gtk-cursor-theme-name=mate
+gtk-cursor-theme-name=Breeze_Snow
 gtk-cursor-theme-size=0
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-enable-event-sounds=1
@@ -14,3 +13,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=rgb
