chromium-flags.conf: remove one flag

--- a/config/chromium-flags.conf
+++ b/config/chromium-flags.conf
@@ -1,85 +1,86 @@
---no-default-browser-check 
---no-pings 
---no-wifi 
---no-recovery-component 
---no-report-upload 
---safebrowsing-disable-download-protection 
---safebrowsing-disable-extension-blacklist 
---safebrowsing-disable-auto-update 
---arc-disable-app-sync 
---arc-disable-locale-sync 
---arc-disable-play-auto-install 
---arc-force-cache-app-icons 
---ash-disable-touch-exploration-mode 
---autofill-server-url about:config 
---block-new-web-contents 
---bwsi 
---cloud-print-uri about:config 
---cloud-print-xmpp-endpoint about:config 
---connectivity-check-url about:config 
---crash-server-url about:config 
---cryptauth-http-host about:config 
---cryptauth-v2-http-host about:config 
---cryptauth-v2-enrollment-http-host about:config 
---data-reduction-proxy-config-url about:config 
---data-reduction-proxy-pingback-url about:config 
---data-reduction-proxy-server-experiments-disabled 
---device-management-url about:config 
---disable-background-networking 
---disable-client-side-phishing-detection 
---disable-data-reduction-proxy-warmup-url-fetch 
---disable-data-reduction-proxy-warmup-url-fetch-callback 
---disable-default-apps 
---disable-demo-mode 
---disable-device-disabling 
---disable-device-discovery-notifications 
---disable-dinosaur-easter-egg 
---disable-domain-reliability 
---disable-cloud-import 
---disable-component-cloud-policy 
---disable-eol-notification 
---disable-gaia-services 
---disable-login-screen-apps 
---disable-machine-cert-request 
---disable-notifications 
---disable-ntp-popular-sites 
---disable-ntp-most-likely-favicons-from-server 
---disable-offer-upload-credit-cards 
---disable-offer-store-unmasked-wallet-cards 
---disable-password-generation 
---disable-permission-action-reporting 
---disable-proximity-auth-bluetooth-low-energy-discovery 
---disable-push-api-background-mode 
---disable-remote-core-animation 
---disable-signin-promo 
---disable-signin-scoped-device-id 
---disable-suggestions-ui 
---disable-sync-app-list 
---disable-sync 
---disable-system-timezone-automatic-detection 
---disable-test-root-certs 
---disable-wake-on-wifi 
---feedback-server about:config 
---gcm-checkin-url about:config 
---gcm-mcs-endpoint about:config 
---gcm-registration-url about:config 
---google-apis-url about:config 
---google-base-url about:config 
---google-doodl-url about:config 
---google-url about:config 
---light 
---lso-url about:config 
---market-url-for-testing about:config 
---oauth-account-manager-url about:config 
---optimization-guide-service-url about:config 
---override-metrics-upload-url about:config 
---permission-request-api-url about:config 
---realtime-reporting-url about:config 
---search-provider-logo-url about:config 
---sync-url about:config 
---third-party-doodle-url about:config 
---trace-upload-url about:config 
---variations-insecure-server-url about:config 
+--no-default-browser-check
+--no-pings
+--no-wifi
+--no-recovery-component
+--no-report-upload
+--safebrowsing-disable-download-protection
+--safebrowsing-disable-extension-blacklist
+--safebrowsing-disable-auto-update
+--arc-disable-app-sync
+--arc-disable-locale-sync
+--arc-disable-play-auto-install
+--arc-force-cache-app-icons
+--ash-disable-touch-exploration-mode
+--autofill-server-url about:config
+--block-new-web-contents
+--bwsi
+--cloud-print-uri about:config
+--cloud-print-xmpp-endpoint about:config
+--connectivity-check-url about:config
+--crash-server-url about:config
+--cryptauth-http-host about:config
+--cryptauth-v2-http-host about:config
+--cryptauth-v2-enrollment-http-host about:config
+--data-reduction-proxy-config-url about:config
+--data-reduction-proxy-pingback-url about:config
+--data-reduction-proxy-server-experiments-disabled
+--device-management-url about:config
+--disable-background-networking
+--disable-client-side-phishing-detection
+--disable-data-reduction-proxy-warmup-url-fetch
+--disable-data-reduction-proxy-warmup-url-fetch-callback
+--disable-default-apps
+--disable-demo-mode
+--disable-device-disabling
+--disable-device-discovery-notifications
+--disable-dinosaur-easter-egg
+--disable-domain-reliability
+--disable-cloud-import
+--disable-component-cloud-policy
+--disable-eol-notification
+--disable-gaia-services
+--disable-login-screen-apps
+--disable-machine-cert-request
+# required for Netflix to work
+#--disable-notifications
+--disable-ntp-popular-sites
+--disable-ntp-most-likely-favicons-from-server
+--disable-offer-upload-credit-cards
+--disable-offer-store-unmasked-wallet-cards
+--disable-password-generation
+--disable-permission-action-reporting
+--disable-proximity-auth-bluetooth-low-energy-discovery
+--disable-push-api-background-mode
+--disable-remote-core-animation
+--disable-signin-promo
+--disable-signin-scoped-device-id
+--disable-suggestions-ui
+--disable-sync-app-list
+--disable-sync
+--disable-system-timezone-automatic-detection
+--disable-test-root-certs
+--disable-wake-on-wifi
+--feedback-server about:config
+--gcm-checkin-url about:config
+--gcm-mcs-endpoint about:config
+--gcm-registration-url about:config
+--google-apis-url about:config
+--google-base-url about:config
+--google-doodl-url about:config
+--google-url about:config
+--light
+--lso-url about:config
+--market-url-for-testing about:config
+--oauth-account-manager-url about:config
+--optimization-guide-service-url about:config
+--override-metrics-upload-url about:config
+--permission-request-api-url about:config
+--realtime-reporting-url about:config
+--search-provider-logo-url about:config
+--sync-url about:config
+--third-party-doodle-url about:config
+--trace-upload-url about:config
+--variations-insecure-server-url about:config
 --variations-server about:config"
 --use-gl=desktop
 --enable-accelerated-video-decode
