--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -23,23 +23,18 @@
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family">
-			<string>monospace</string>
+			<string>sans-serif</string>
 		</test>
 		<edit name="family" mode="assign">
-			<string>Hack</string>
+			<string>Ubuntu</string>
 		</edit>
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family">
-			<string>sans-serif</string>
+			<string>monospace</string>
 		</test>
 		<edit name="family" mode="assign">
-			<string>Noto Sans</string>
+			<string>Ubuntu Mono</string>
 		</edit>
 	</match>
-	<selectfont>
-		<rejectfont>
-			<glob>*/usr/share/fonts/noto/NotoSans-Thin.ttf</glob>
-		</rejectfont>
-	</selectfont>
 </fontconfig>
