--- a/config/i3/config
+++ b/config/i3/config
@@ -1,5 +1,5 @@
 set $mod Mod4
-set $font "pango:Cantarell Bold 11"
+set $font "pango:monospace 9"
 set $term alacritty
 set $launcher "rofi -show run
 
@@ -114,11 +114,3 @@ bar {
 	position top
 	status_command i3status
 }
-
-# class                 border  bground text    indicator child_border
-client.focused          #0F3E7B #4271AE #FFFFFF #0F3E7B   #4271AE
-client.focused_inactive #2B2F40 #ECECE8 #2B2F40 #2B2F40   #5F676A
-client.unfocused        #2B2F40 #ECECE8 #2B2F40 #2B2F40   #222222
-client.urgent           #2F343A #900000 #FFFFFF #900000   #900000
-client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
-client.background       #FFFFFF
