--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,16 +1,14 @@
 [Settings]
 gtk-theme-name=Yaru
 gtk-icon-theme-name=Yaru
-gtk-font-name=Ubuntu 11
-gtk-menu-images=1
-gtk-button-images=0
-gtk-toolbar-style=GTK_TOOLBAR_ICONS
-gtk-cursor-theme-name=Breeze_Snow
+gtk-font-name=Ubuntu Regular 11
 gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=0
 gtk-xft-hintstyle=hintmedium
-gtk-xft-rgba=rgb
