--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -31,10 +31,23 @@
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family">
+			<string>serif</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>Liberation Serif</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test qual="any" name="family">
 			<string>monospace</string>
 		</test>
 		<edit name="family" mode="assign">
 			<string>Ubuntu Mono</string>
 		</edit>
 	</match>
+	<selectfont>
+		<rejectfont>
+			<glob>*/usr/share/fonts/noto/NotoSans-Thin.ttf</glob>
+		</rejectfont>
+	</selectfont>
 </fontconfig>
