--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -26,7 +26,7 @@
 			<string>sans-serif</string>
 		</test>
 		<edit name="family" mode="assign">
-			<string>Ubuntu</string>
+			<string>Source Sans Pro</string>
 		</edit>
 	</match>
 	<match target="pattern">
@@ -48,6 +48,9 @@
 	<selectfont>
 		<rejectfont>
 			<glob>*/usr/share/fonts/noto/NotoSans-Thin.ttf</glob>
+		</rejectfont>
+		<rejectfont>
+			<glob>/usr/share/fonts/mathjax2/*</glob>
 		</rejectfont>
 	</selectfont>
 </fontconfig>
