--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Yaru
+gtk-theme-name=Yaru-dark
 gtk-icon-theme-name=Yaru
-gtk-font-name=Ubuntu Regular 11
+gtk-font-name=Ubuntu 12
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -10,5 +10,6 @@ gtk-menu-images=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
-gtk-xft-hinting=0
+gtk-xft-hinting=1
 gtk-xft-hintstyle=hintmedium
+gtk-cursor-theme-name=Adwaita
